# vscotero

./: .gitignore  CHANGELOG.md  README.md  WelcomePythonOrg2023.md  WelcomePythonOrg2023.yaml  annotations.py  config.py  config.toml  core.py  daemon.py  env.yml  etzioniNormativeaffectiveFactorsNew1988.md  etzioniNormativeaffectiveFactorsNew1988.yaml  main.py  note-utils.py  note_utils.py  pyproject.toml  requirements.txt  vanzundertIfYouBuild2012.md  vanzundertIfYouBuild2012.yaml  volkerExploringGroupDynamics2016.md  volkerExploringGroupDynamics2016.yaml  vsco-tero.py  vsco-tero.yml  watsonWhatInquisitiveness2015.md  watsonWhatInquisitiveness2015.yaml
tests/: conftest.py  test.bib  test_annotations.py  test_cli.py  test_cli_limit.py  test_version.py  test_writer.py
vsco-tero/: README.md  package-lock.json  package.json
vsco-tero/src/: extension.ts
vscotero/: __init__.py  annotations.py  bib.py  cli.py  config.py  writer.py
vscotero/src/: annotations.py  bib.py  utils.py  writer.py
